--- a/src/main/resources/pool.properties
+++ b/src/main/resources/pool.properties
@@ -2,3 +2,4 @@ db.pool.schema-cartographie.pool.manager.driver=org.postgresql.Driver
 db.pool.schema-cartographie.pool.manager.url=jdbc:postgresql://localhost/carthographie
 db.pool.schema-cartographie.pool.manager.login=postgres
 db.pool.schema-cartographie.pool.manager.password=admin
+appli.conf.cartographie.html.dir=src/main/resources/generator/html/
