--- a/src/main/resources/Carto-pool-1D-INTRA.properties
+++ b/src/main/resources/Carto-pool-1D-INTRA.properties
@@ -2,4 +2,6 @@ db.pool.schema-cartographie.pool.manager.driver=org.postgresql.Driver
 db.pool.schema-cartographie.pool.manager.url=jdbc:postgresql://localhost/carthographie
 db.pool.schema-cartographie.pool.manager.login=postgres
 db.pool.schema-cartographie.pool.manager.password=admin
-appli.conf.cartographie.html.dir=src/main/resources/generator/html/
+db.pool.schema-cartographie.query.departement = select deptcode,libelle_court ,libelle_long from  tdp
+db.pool.schema-cartographie.query.academie = select codart,libcou,liblon from tac
+db.pool.schema-cartographie.query.discipline = select discco ,disclc ,discli from tdi
