--- a/src/main/resources/carto.properties
+++ b/src/main/resources/carto.properties
@@ -1,1 +1,2 @@
 appli.conf.cartographie.html.dir=src/main/resources/generator/html/
+appli.conf.cartographie.html.dir.out=D:/projIndiv/repo/ws-carto/cartographie-generateur/src/main/resources/generator/html
